--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
-rootProject.name = 'B&W'
+pluginManagement {
+	repositories {
+		maven {
+			name = 'Fabric'
+			url = 'https://maven.fabricmc.net/'
+		}
+		mavenCentral()
+		gradlePluginPortal()
+	}
+}
