--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+hiplugins {
 	id 'fabric-loom' version '1.9-SNAPSHOT'
 	id 'maven-publish'
 }
@@ -11,12 +11,11 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+    maven {
+        url "https://maven.fabricmc.net/"
+    }
 }
+
 
 loom {
 	splitEnvironmentSourceSets()
